infra/k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: jp-notification
