infra/k8s/job-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job
  template:
    metadata:
      labels:
        app: job
    spec:
      containers:
        - name: job
          image: ankiitsingh21/jp-job
---
apiVersion: v1
kind: Service
metadata:
  name: job-srv
spec:
  selector:
    app: job
  ports:
    - name: job
      protocol: TCP
      port: 3003
      targetPort: 3003
