infra/k8s/master-data-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-data-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master-data
  template:
    metadata:
      labels:
        app: master-data
    spec:
      containers:
        - name: master-data
          image: ankiitsingh21/jp-master-data
---
apiVersion: v1
kind: Service
metadata:
  name: master-data-srv
spec:
  selector:
    app: master-data
  ports:
    - name: master-data
      protocol: TCP
      port: 3000
      targetPort: 3000
