infra/k8s/master-data-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-data-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master-data-postgres
  template:
    metadata:
      labels:
        app: master-data-postgres
    spec:
      containers:
        - name: master-data-postgres
          image: postgres
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-master-data-srv
spec:
  selector:
    app: master-data-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
