infra/k8s/master-data-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-data-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master-data-redis
  template:
    metadata:
      labels:
        app: master-data-redis
    spec:
      containers:
        - name: master-data-redis
          image: redis:alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master-data-srv
spec:
  selector:
    app: master-data-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
